Rename more metrics